2008-11-10  Al Riddoch  <alriddoch@googlemail.com>

	* wfmath/quaternion_test.cpp, wfmath/rotmatrix_test.cpp,
	  wfmath/shape_test.cpp, wfmath/vector_test.cpp: Force debug mode
	  before include <cassert>.

2008-11-09  Al Riddoch  <alriddoch@googlemail.com>

	* wfmath/polygon_intersect.h: Convery the warning about unfinished
	  functionality to a big FIXME section.

2008-11-09  Al Riddoch  <alriddoch@googlemail.com>

	* wfmath/intersect.h: Add another set of parentheses to make things
	  clearer.

2008-11-07  Al Riddoch  <alriddoch@googlemail.com>

	* wfmath/intersect.h: Move parentheses to a more appropriate place.

2008-11-04  Anders Petersson  <demitar@worldforge.org>

	* configure.ac: Added AC_PROG_CXX to prevent a circular dependency in
	  AC_CHECK_HEADERS(sstream strstream, ...)

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* wfmath.spec.in: Create new sub package for generated documentation.

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* configure.ac: Add support for cross compiling, and fix up the
	  comments.

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* Release 0.3.7

2007-11-25  Al Riddoch  <alriddoch@googlemail.com>

	* NEWS: Update date on release news item.

	* acinclude.m4: Include the latest version of the pkgconfig macro.

	* configure.ac: Increment version number, and use latest pkgconfig
	  check syntax.

	* AUTHORS, wfmath.spec.in: Update contact email addresses,

	* atlas/Makefile.am: Remove Atlas-C++ 0.4 test programs.

2007-11-24  Al Riddoch  <alriddoch@zepler.org>

	* wfmath.spec.in: Split static libraries out into their own
	  package.

2007-11-20  Al Riddoch  <alriddoch@zepler.org>

	* wfmath/atlasconv.h: Initialise age when setting up Quaternion from
	  Atlas data.

2007-07-20  Al Riddoch  <alriddoch@zepler.org>

	* NEWS: Update date on release news item.

	* Release 0.3.6

2007-07-18  Al Riddoch  <alriddoch@zepler.org>

	* configure.ac: Increment version number to 0.3.6
